# the-deep-search

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  databases.py  flake.nix  hello.py  main.py  pyproject.toml  runner.py  server.py
docs/: config.md  deploy.md
old_src/: databases.py  main.py  runner.py  server.py
src/: config.py  constants.py  core_types.py  executor.py  logs.py  main.py  new_web.py  plugin.py  search.py  source.py  storage.py  strategy.py  tasks.py  web.py
src/plugins/: directory_plugin.py
src/sources/: __init__.py  directory_source.py  fingerprinted_source.py  gdrive_source.py  rss_podcast_source.py
src/strategies/: __init__.py  _template.py  add_sync_tokens.py  auto_process.py  chunks_from_text.py  compress_audio.py  create_structure.py  delete_document.py  dl_audio.py  embed_chunks.py  pretty_markdown.py  pretty_markdown.yaml  strategy.py  transcribe.py  transcript_to_synced_text.py  update_document.py
src/streamlit-components/mark_linker/: example.py
src/streamlit-components/mark_linker/mark_linker/: __init__.py  setup.py
src/streamlit-components/mark_linker/mark_linker/frontend/: flake.nix  package.json
src/streamlit-components/mark_linker/mark_linker/frontend/public/: index.html
src/streamlit-components/mark_linker/mark_linker/frontend/src/: index.tsx
src/streamlit-components/syncid-linker/: example.py
src/streamlit-components/syncid-linker/syncid_linker/: __init__.py  setup.py
src/streamlit-components/syncid-linker/syncid_linker/frontend/: package.json  pnpm-lock.yaml
src/streamlit-components/syncid-linker/syncid_linker/frontend/public/: index.html
src/streamlit-components/syncid-linker/syncid_linker/frontend/src/: index.tsx
tests/strategies/: test_chunks_from_text.py  test_embed_chunks.py
