[project]
name = "thedeepsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "deepgram-sdk>=3.8.0",
    "joblib>=1.4.2",
    "jqpy>=1.0.0",
    "openai>=1.60.2",
    "pydantic>=2.10.6",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]
