[project]
name = "thedeepsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "dotenv>=0.9.9",
    #"deepgram-sdk>=3.8.0",
    "fastapi>=0.115.8",
    "feedparser>=6.0.11",
    "gitignore-filter>=0.2.3",
    "google-api-python-client>=2.166.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "joblib>=1.4.2",
    "litellm>=1.65.7",
    "millify>=0.1.1",
    "openai>=1.60.2",
    "platformdirs>=4.3.7",
    "pydantic>=2.10.6",
    "pymilvus>=2.5.4",
    "pyyaml>=6.0.2",
    "streamlit>=1.44.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]


[tool.pytest.ini_options]
pythonpath="src"
addopts="-v"
asyncio_mode = "auto"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]
